Feat/improve notebook front (#292)
* Feat: Add return button

* Feat: Add slim select in notebook

* Feat: improve notebook card

* Feat: set button to go notebook

* Feat: add recipe to notebook on recipe page

* Fix: Are you sure english error

* Fix: slimselect event if dom is update

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -166,7 +166,7 @@ progress.uk-progress[value]::-webkit-progress-value {
   }
 }
 
-.ss-main .ss-multi-selected {
+.ss-main .ss-multi-selected, .ss-main .ss-single-selected {
   border: none;
   width:100%;
   height: 100%;
@@ -182,7 +182,8 @@ progress.uk-progress[value]::-webkit-progress-value {
   }
 }
 
-.ss-main .ss-multi-selected .ss-add {
+.ss-main .ss-multi-selected .ss-add,
+.ss-main .ss-single-selected .ss-arrow {
   margin: 14px 12px;
 }
 
