--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -15,12 +15,14 @@
     font-weight: normal;
 }
 
-.ss-main .ss-multi-selected {
+.ss-main .ss-multi-selected,
+.ss-main .ss-single-selected {
     border: none;
     width:100%;
     height: 100%;
 }
 
-.ss-main .ss-multi-selected .ss-add {
+.ss-main .ss-multi-selected .ss-add,
+.ss-main .ss-single-selected .ss-arrow {
     margin: 14px 12px;
 }
