--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <div class="uk-child-width-1-1@m" uk-grid>
   <div>
-    <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle uk-background-fixed" uk-parallax="blur: 4" style="background-image: url(<%= url_for(@recipe.image.variant resize: '1000x1000') %>;)"></div>
+    <div class="uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle uk-background-fixed" uk-parallax="blur: 4" style="background-image: url(<%= @recipe.image.attached? ? url_for(@recipe.image.variant resize: '1000x1000') : "https://picsum.photos/400/200" %>;)"></div>
   </div>
 </div>
 <div class="uk-section uk-section-secondary uk-light">
@@ -35,6 +35,26 @@
         </div>
       </div>
     </div>
+    <% if current_user && @notebooks_available.count > 0 %>
+      <a href="#addToNotebook" class="uk-button uk-button-default uk-button-small" uk-toggle><%= t('recipe.title.add_to_notebook') %></a>
+    <% end %>
+  </div>
+</div>
+<div id="addToNotebook" uk-modal>
+  <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+    <button class="uk-modal-close-outside" type="button" uk-close></button>
+    <h2 class="uk-modal-title landing-title"><%= t('recipe.title.add_to_notebook') %></h2>
+    <% if @notebooks_available.count > 0 %>
+      <%= simple_form_for @recipe, :url => recipe_add_to_notebook_url(@recipe), :method => 'post' do |f| %>
+        <%= f.input :notebooks, collection: @notebooks_available, label: false, as: :select, input_html: {
+        slimselect: true,
+        slimselectNoResult: t('slimselect.notebooks.no_result'),
+        slimselectSearchPlaceholder: t('slimselect.notebooks.search_placeholder'),
+        slimselectPlaceholder: t('slimselect.notebooks.placeholder'),
+        } %>
+        <%= f.button :submit, "Confirmer", class: 'uk-button uk-button-secondary uk-button-small', input_html: { 'uk-close': true } %>
+      <% end %>
+    <% end %>
   </div>
 </div>
 <div class="uk-section uk-section-default">
@@ -54,7 +74,7 @@
           <% if current_user %>
             <% if ShoppingList.where(user_id: current_user.id).count > 0 %>
               <%= simple_form_for @recipe, :url => recipe_add_ingredients_to_list_url(@recipe), :method => 'post' do |f| %>
-                <%= f.input :shopping_lists, collection: ShoppingList.where(user_id: current_user.id), label: "Ajouter à une liste de courses :" %>
+                <%= f.input :shopping_lists, collection: ShoppingList.where(user_id: current_user.id).order(:name), label: "Ajouter à une liste de courses :" %>
                 <%= f.button :submit, "Confirmer" %>
               <% end %>
             <% else %>
