--- a/app/views/recipes/_edit_recipe_ingredient_fields.html.erb
+++ b/app/views/recipes/_edit_recipe_ingredient_fields.html.erb
@@ -3,11 +3,21 @@
     <div class=" uk-grid">
       <div class="uk-width-1-1">
         <% if !f.object.ingredient.nil? %>
-          <%= f.input :ingredient, :label => t("recipe.title.ingredient"), collection: Ingredient.where(:confirmed => true).order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, selected: f.object.ingredient.id,
-                      :include_blank => false, input_class: false, input_html: {class: "uk-select"}, defaults: {input_class: "uk-select"} %>
+          <%= f.input :ingredient, :label => t("recipe.title.ingredient"), collection: Ingredient.order(:name).where(:confirmed => true).order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, selected: f.object.ingredient.id,
+                      :include_blank => false, input_class: false, input_html: {class: "uk-select"}, defaults: {input_class: "uk-select"}, input_html: {
+          slimselect: true,
+          slimselectNoResult: t('slimselect.ustensils.no_result'),
+          slimselectSearchPlaceholder: t('slimselect.ustensils.search_placeholder'),
+          slimselectPlaceholder: t('slimselect.ustensils.placeholder'),
+        } %>
         <% else %>
-          <%= f.input :ingredient, :label => t("recipe.title.ingredient"), collection: Ingredient.where(:confirmed => true).order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select,
-                      :include_blank => false, input_class: false, input_html: {class: "uk-select"}, defaults: {input_class: "uk-select"} %>
+          <%= f.input :ingredient, :label => t("recipe.title.ingredient"), collection: Ingredient.order(:name).where(:confirmed => true).order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select,
+                      :include_blank => false, input_class: false, input_html: {class: "uk-select"}, defaults: {input_class: "uk-select"}, input_html: {
+          slimselect: true,
+          slimselectNoResult: t('slimselect.ustensils.no_result'),
+          slimselectSearchPlaceholder: t('slimselect.ustensils.search_placeholder'),
+          slimselectPlaceholder: t('slimselect.ustensils.placeholder'),
+        } %>
         <% end %>
       </div>
       <% if f.object.recipe_quantity.nil? %>
