--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -13,6 +13,7 @@
   <div class="form-inputs">
     <%= f.input :name, label: t("ingredient.title.name") %>
     <%= f.input :description, label: t("ingredient.title.description") %>
+    <%= f.input :shelf_tag, collection: Ingredient.shelf_tags.values, label: "Dans quel rayon se trouve votre produit ?" %>
   </div>
 
   <div class="uk-margin">
