--- a/app/views/meal_plans/index.html.erb
+++ b/app/views/meal_plans/index.html.erb
@@ -1,36 +1,88 @@
-<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin uk-container-small" uk-grid>
-  <div class="uk-card uk-card-body">
-    <div class="uk-card uk-card-default"style="width: 800px">
-      <div class="uk-card-media-top">
-        <img data-src="https://images.unsplash.com/photo-1490645935967-10de6ba17061?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1335&q=80" width="1800" height="1200" alt="" uk-img>
-      </div>
-    </div>
-  </div>
+<div class="uk-container uk-padding">
+  <h1 class="title">Mon planning de repas</h1>
 </div>
+<div class="uk-grid-match uk-grid-small .uk-child-width-2 uk-child-width-1-4@s uk-child-width-1-2@m uk-child-width-1-4@l uk-child-width-1-6@xl uk-flex-center uk-margin uk-margin-left uk-margin-right" uk-grid>
+  <% (0..6).each do |n| %>
+    <div>
+        <div class="uk-card uk-card-default <% if (n + 1) % 7 == Time.now.wday %> <%= "orange-card" %> <% end %> meal-card">
+          <h4 class="title uk-padding uk-padding-remove-bottom"><%= @days[n] %></h4>
+          <h5 class="title uk-padding-small uk-padding-remove-top">Midi</h5>
+          <div>
+            <%= link_to @midday_meals[n][:starter] do %>
+              <div class="recipe-img recipe-img-meal-plan" style="
+                <% if @midday_meals[n][:starter].image.attached? %>
+                  background-image: url(<%= rails_blob_url @midday_meals[n][:starter].image %>);
+                <% end %>
+              ">
+                <p class="title uk-padding-small">
+                  <%= @midday_meals[n][:starter].title %>
+                </p>
+              </div>
+            <% end %>
 
+            <%= link_to @midday_meals[n][:dish] do %>
+              <div class="recipe-img recipe-img-meal-plan" style="
+                <% if @midday_meals[n][:dish].image.attached? %>
+                  background-image: url(<%= rails_blob_url @midday_meals[n][:dish].image %>);
+                <% end %>
+              ">
+                <p class="title uk-padding-small">
+                  <%= @midday_meals[n][:dish].title %>
+                </p>
+              </div>
+            <% end %>
 
-<!--<p id="notice"><%#= notice %></p>-->
+            <%= link_to @midday_meals[n][:dessert] do %>
+              <div class="recipe-img recipe-img-meal-plan" style="
+                <% if @midday_meals[n][:dessert].image.attached? %>
+                  background-image: url(<%= rails_blob_url @midday_meals[n][:dessert].image %>);
+                <% end %>
+              ">
+                <p class="title uk-padding-small">
+                  <%= @midday_meals[n][:dessert].title %>
+                </p>
+              </div>
+            <% end %>
+          </div>
+          <h5 class="title uk-padding-small uk-padding-remove-top">Soir</h5>
+          <div>
+            <%= link_to @evening_meals[n][:starter] do %>
+              <div class="recipe-img recipe-img-meal-plan" style="
+                <% if @evening_meals[n][:starter].image.attached? %>
+                  background-image: url(<%= rails_blob_url @evening_meals[n][:starter].image %>);
+                <% end %>
+              ">
+                <p class="title uk-padding-small">
+                  <%= @evening_meals[n][:starter].title %>
+                </p>
+              </div>
+            <% end %>
 
-<!--<h1>Meal Plans</h1>-->
+            <%= link_to @evening_meals[n][:dish] do %>
+            <div class="recipe-img recipe-img-meal-plan" style="
+              <% if @evening_meals[n][:dish].image.attached? %>
+                background-image: url(<%= rails_blob_url @evening_meals[n][:dish].image %>);
+              <% end %>
+            ">
+              <p class="title uk-padding-small">
+                <%= @evening_meals[n][:dish].title %>
+              </p>
+            </div>
+            <% end %>
 
-<!--<table>-->
-<!--  <thead>-->
-<!--    <tr>-->
-<!--      <th colspan="3"></th>-->
-<!--    </tr>-->
-<!--  </thead>-->
-
-<!--  <tbody>-->
-<%# @meal_plans.each do |meal_plan| %>
-<!--      <tr>-->
-<!--        <td><%#= link_to 'Show', meal_plan %></td>-->
-<!--        <td><%#= link_to 'Edit', edit_meal_plan_path(meal_plan) %></td>-->
-<!--        <td><%#= link_to 'Destroy', meal_plan, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
-<!--      </tr>-->
-<%# end %>
-<!--  </tbody>-->
-<!--</table>-->
-
-<!--<br>-->
-
-<%#= link_to 'New Meal Plan', new_meal_plan_path %>
+            <%= link_to @evening_meals[n][:desert] do %>
+              <div class="recipe-img recipe-img-meal-plan" style="
+                <% if @evening_meals[n][:dessert].image.attached? %>
+                  background-image: url(<%= rails_blob_url @evening_meals[n][:dessert].image %>);
+                <% end %>
+              ">
+                <p class="title uk-padding-small">
+                  <%= @evening_meals[n][:dessert].title %>
+                </p>
+              </div>
+            <% end %>
+          </div>
+        </div>
+    </div>
+  <% end %>
+</div>
