--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,6 +34,11 @@
                   <span class="uk-margin-small-right" uk-icon="icon: file-text"></span><%= t('navbar.my_recipes') %>
                 <% end %>
               </li>
+              <li class="<%= current_page_class?(meal_plans_path) %>">
+                <%= link_to meal_plans_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: calendar"></span>Mon planning de repas
+                <% end %>
+              </li>
               <li class="<%= current_page_class?(liked_producers_path) %>">
                 <%= link_to liked_producers_path do %>
                   <span class="uk-margin-small-right" uk-icon="icon: heart"></span><%= t('users.followed_producers.link') %>
