--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -21,6 +21,12 @@
         <%= f.button :submit, t('.update'), class: 'uk-width-1-1' %>
       <% end %>
 
+    <div class="uk-margin-medium uk-text-center">
+      <%= link_to edit_preferences_path, class: 'uk-button uk-button-primary uk-width-1-1' do %>
+        <%= t("users.edit_like_ingredients") %>
+      <% end %>
+    </div>
+
     <% if current_user.isProducer == true %>
       <div class="uk-margin-small uk-text-center">
         <p>Vous êtes un producteur !</p>
@@ -28,7 +34,7 @@
     <% else %>
       <div class="uk-margin-small uk-text-center">
         <%= link_to createproducer_path, class: 'uk-button uk-button-primary uk-width-1-1' do %>
-          Demander à être producteur
+          Devenir producteur
         <% end %>
       </div>
     <% end %>
