--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -29,7 +29,7 @@
     <%= f.input :sort, :label => t("search.sort_by"), :prompt => t("search.sort_by"), :selected => @sort, collection: @sort_possibilities, as: :select, input_html: { class: 'uk-select' }, wrapper_class: "uk-width-1-4@s", :label_method => lambda { |el| t "search.sort.#{el.first}" } %>
 <% end %>
 <div class="uk-grid-small uk-child-width-1@s uk-child-width-1-4@m uk-padding" uk-grid>
-    <p class="uk-text-small uk-width-1-1"><%= @recipes.uniq.count %> résultats trouvés</p>
+    <p class="uk-text-small uk-width-1-1"><%= @recipe_count %> résultats trouvés</p>
     <% if (@recipes.uniq.count > 0) %>
         <% @recipes.each do |recipe| %>
             <div>
