--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -209,3 +209,41 @@ body {
   width: 2000px;
   height: 200px;
 }
+
+.recipe-img {
+  width: 100%;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.recipe-search-img {
+  height: 225px;
+}
+
+.recipe-title {
+  display: block;
+  max-width: 100%;
+  color: red;
+  text-overflow: ellipsis;
+}
+
+.meal-card {
+  a:hover {
+    text-decoration: none;
+  }
+}
+
+.orange-card {
+  background-color: $recipy-primary-color;
+}
+
+.recipe-img-meal-plan {
+  max-height:100px;
+  background-color: $recipy-primary-color;
+
+  & .title {
+    text-shadow: 0px 0px 4px white;
+  }
+}
