UI improvements recipe card (#318)
* fix: design on preparation time & clickable title

* fix: title & description tooltip

* fix: plural

* fix: plural doesn't work properly

* fix: title trunkate properly

* fix: homepage design

* fix: image clickable

--- a/app/views/cook/home/index.html.erb
+++ b/app/views/cook/home/index.html.erb
@@ -32,25 +32,25 @@
           <% @recipes.each do |recipe| %>
             <div>
                 <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top recipe-img" style="background-image: url(
-                        <% if recipe.image.attached? %>
-                            <%= rails_blob_url recipe.image %>
-                        <% else %>
-                            <%= "https://picsum.photos/400/200" %>
-                        <% end %>)">
+                  <%= link_to recipe do %>
+                    <div class="uk-card-media-top recipe-img recipe-search-img" style="
+                    <% if recipe.image.attached? %>
+                      background-image: url(<%= rails_blob_url recipe.image %>);
+                      <% else %>
+                      <%= "https://picsum.photos/400/200" %>
+                      <% end %>
+                    ">
                     </div>
+                  <% end %>
                     <div class="uk-card-body">
                         <div uk-tooltip="<%= recipe.title %>">
-                          <h3 class="uk-card-title uk-text-truncate" alt="<%= recipe.title %>%"><%= recipe.title %></h3>
+                          <h3 class="uk-card-title uk-text-truncate" alt="<%= recipe.title %>%"> <%= link_to recipe.title, recipe, class: "uk-button uk-button-text uk-text-truncate" %></h3>
                         </div>
                         <div class="star-ratings star-dark">
                             <div class="star-ratings-value" style="width: <%= recipe.score * 20 %>%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
                             <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
                         </div>
-                        <p><%= truncate recipe.description, length: 42, separator: /\w+/ %></p>
-                    </div>
-                    <div class="uk-card-footer">
-                        <%= link_to t("search.read_more"), recipe, class: "uk-button uk-button-text" %>
+                        <p><%= truncate recipe.description, length: 150, separator: /\w+/ %></p>
                     </div>
                 </div>
             </div>
